src/static/scss/components/_data-block.scss
.data-block {
	max-width: 1050px;
	margin: auto;
	padding: 0px 25px;
	&__title {
		font-weight: bold;
		margin-bottom: 25px;
	}
	&__content {
		width: 100%;
		@include medium {
			display: table;
		}
	}
	&__info, &__viz {
		@include breakpoint(medium) {
			display: table-cell;
		}
	}
	&__info {
		width: 100%;
		@include breakpoint(medium) {
			width: 40%;
		}
		
		vertical-align: top;
		padding-right: 25px;
	}

	&__viz {
		width: 100%;
		@include breakpoint(medium) {
			width: 60%;
		}

		&__rendering-area {
			position: relative;
		}

		&__y-axis-label {
			font-weight: bold;
			font-size: 14px;
			color: palette-get(na-black);
			text-anchor: middle;
		}

		&__debugging-list {
			word-break: break-all;
			font-size: 14px;
		}

		&:first-child {
			width: 100% !important;
		}
	}

	&__paragraph {
		position: relative;
		p {
			line-height: 1.6;
			color: palette-get(na-black-40);
			font-size: 16px;
		}
		&__data {
			font-weight: bold;
			color: palette-get(na-black);
		}

		&__link {
			color: palette-get(na-black-30) !important;
			font-weight: bold;

			&:hover {
				color: palette-get(na-turquoise) !important;
			}
		}

		&__explainer {
			
			display: inline-block;

			svg {
				width: 18px;
				height: 18px;
				position: relative;
				top: 3px;
				fill: palette-get(na-black-30);

				&:hover {
					fill: palette-get(na-turquoise);
				}
			}

			&-popup {
				display: block;
				background-color: palette-get(na-black-30);
				color: white;
				position: absolute;
				line-height: 1.3;
				font-size: 14px;
				padding: 15px;
				&.hidden {
					display: none;
				}
			}
		}
	}

	&__callout-container {
		display: block;
		width: 100%;
		padding-bottom: 15px;
	}

	&__callout {
		display: inline-block;
		color: palette-get(na-black-40);
		vertical-align: top;

		.children-1 & {
			width: 100%;
		}
		.children-2 & {
			width: 50%;

			&:first-child {
				padding-right: 10px;
			}

			&:last-child {
				padding-left: 10px;
			}
		}
		.children-3 & {
			width: 100%;
			display: block;
		}

		&__value {
			font-size: 45px;
			margin-bottom: 0px;
			font-weight: normal;
			line-height: 1.1;
			color: palette-get(na-black-70);
		}

		&__label {
			text-transform: uppercase;
			font-size: 12px;
			letter-spacing: .7px;
			color: palette-get(na-black-70);
			font-weight: bold;
		}
	}

	&__source {
		color: palette-get(na-black-30);
	}

	&__indicator-link {
		border: 1px solid palette-get(na-black-30);
		margin-top: 15px;
		padding: 10px;
		display: inline-block;
		color: palette-get(na-black-30);

		&:hover {
			background-color: palette-get(na-black-30);
			color: white;
		}
	}
}

.tick {
	& > line {
		stroke: palette-get(na-black-10) !important;
		stroke-dasharray: 5, 5;
	}
	& > path {
		stroke-width: 0;
	}

	& > text {
		fill: palette-get(na-black-70);
	}
}

